--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-websocket = "0.26.2"
 tokio = { version = "0.2.22", features = ["macros"] }
-futures = "0.1.29"
+futures = "0.3.5"
 base64 = "0.12.3"
+tungstenite = "0.11.1"
