--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -11,3 +11,5 @@ tokio = { version = "0.2.22", features = ["macros"] }
 futures = "0.3.5"
 base64 = "0.12.3"
 tungstenite = "0.11.1"
+log = "0.4.11"
+simple-logging = "2.0.2"
