--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -13,3 +13,9 @@ base64 = "0.12.3"
 tungstenite = "0.11.1"
 log = "0.4.11"
 simple-logging = "2.0.2"
+actix-web = { version = "2.0", features = ["rustls"] }
+actix-rt = "1.0"
+actix-web-actors = "2.0"
+actix = "0.9"
+openssl = "0.10.30"
+rustls = "0.16.0"
