--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "0.2.22", features = ["macros"] }
+tokio = { version = "0.2.22", features = ["macros", "timer"] }
 futures = "0.3.5"
 base64 = "0.12.3"
 async-tungstenite = { version = "0.8.0", features = ["async-tls", "async-std-runtime"]}
